// File encoding: utf8. Enter ChangeLog entries below this line

2006-09-07  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/data/Makefile.am: Add rule for splash.png

2006-09-03  Thomas Schürger <thomas@schuerger.com>
	* common/gtk/gtkbugs.c: Enabled workaround for toolbuttons that could
	not be pressed twice.

2006-09-03  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/data/Makefile.am, editor/gtk/Makefile.am: Remove the *.res
	files from the tarball (partly revert 2006-09-01)
	* Changed ChangeLog to utf8.

2006-09-02  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/data/splash.png: Removed, replaced by splash.svg
	* configure.ac, Makefile.am, client/gtk/Makefile.am,
	client/gtk/data/Makefile.am: Fix themedir for Windows.
	* pioneers.nsi.in, client/gtk/data/tick.png, client/gtk/data/cross.png:
	Images are no longer in use.
	* configure.ac: Nicer feedback from configure script when Gtk not
	present.

2006-09-01  Roland Clobus <rclobus@bigfoot.com>
	* editor/gtk/Makefile.am, client/gtk/data/Makefile.am, Makefile.am:
	Add the resource files for Microsoft Windows to the tarball.
	
2006-08-31  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/data/splash.svg: Version 0.10 is shown now.
	* docs/README.release: What to do extra when the protocol changes.
	* README.Cygwin: Found more Cygwin packages.
	
2006-08-26  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac: Subversion repository is at 0.10.2.
	* docs/README.release: Added the command for tagging the repository.
	
2006-08-26  Roland Clobus <rclobus@bigfoot.com>
	* Released version 0.10.1

2006-08-26  Roland Clobus <rclobus@bigfoot.com>
	* client/ai/lobbybot.c: Make it build with gcc-2.95 again.
	* server/gtk/main.c, server/meta.c: Changed reported hostname to
	overridden hostname. If it is left empty, the metaserver will do a 
	hostname lookup.
	* common/network.h: Include time.h too.
	* client/help/C/pioneers.xml: Rename AI -> computer player.
	* client/common/client.c, server/develop.c: Year of Plenty